Feat: auto flush and load to/from SQL